--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-PORT=3001
+PORT=
 
-DB_URL=mongodb://mocafi:$!Mocafi$!2020@ec2-107-21-159-230.compute-1.amazonaws.com:27017
-DB_NAME=mocafi
+DB_URL=
+DB_NAME=
